<resources>
    <string name="app_name">Walmart_login_page</string>
    <string name="signin_email">Email address(required)</string>
    <string name="signin_password">Password(required)</string>
    <string name="signin_btn">Sign In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Create a new account</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signin_title">Sign in to your account</string>
    <string name="dash">dash</string>
</resources>