<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="@dimen/image_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/image_margin"

        app:srcCompat="@drawable/walmart_logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:textAlignment="center"
        android:textSize="23sp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/signin_title"/>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >

        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_end"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="@dimen/margin_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:paddingEnd="@dimen/margin_end"
                android:text="@string/signin_email"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:maxLength="60"
                android:paddingStart="@dimen/padding_start"
                android:paddingTop="@dimen/padding_top"
                android:paddingEnd="@dimen/padding_end"
                android:paddingBottom="@dimen/padding_bottom"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/email_hint"
                android:background="@drawable/curved"
                android:cursorVisible="true"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:inputType="textEmailAddress"

                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_end"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="@dimen/padding_start"
                android:paddingEnd="@dimen/padding_end"
                android:text="@string/signin_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/image_margin"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/image_margin"
                android:autofillHints="@string/password_hint"
                android:background="@drawable/curved"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:inputType="textPassword"
                android:maxLength="60"
                android:paddingStart="@dimen/padding_start"
                android:paddingTop="@dimen/padding_top"
                android:paddingEnd="@dimen/padding_end"
                android:paddingBottom="@dimen/padding_bottom"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/forget_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:clickable="true"
                android:textSize="14sp"
                android:focusable="true"
                android:fontFamily="sans-serif-light"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginEnd="@dimen/margin_end"
                android:layout_marginBottom="@dimen/margin_bottom"

                android:padding="3dp"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                 />

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signin_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/image_margin"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="@dimen/image_margin"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_curved"

                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_start"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="3dp"
                    android:layout_height="2dp"
                    android:layout_weight="1.5"
                    android:contentDescription="@string/dash"
                    android:src="@color/grey_300" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-black"
                    android:padding="2dp"
                    android:text="@string/no_account"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:textColor="@color/grey_700"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_height="3dp"
                    android:layout_width="1dp"
                    android:layout_weight="1.5"
                    android:contentDescription="@string/dash"
                    android:src="@color/grey_300" />

            </LinearLayout>

            <RelativeLayout
                android:layout_marginEnd="@dimen/image_margin"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/image_margin"
                android:layout_marginStart="@dimen/image_margin"
                android:layout_height="48dp">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/curved"
                    android:layout_height="48dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:text="@string/sign_up"
                    android:layout_height="match_parent"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>